2001-08-20  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in: Made probe caching. Removed some debugging messages.
	Continued work on probe_* functions.

	* display-conf.in: Use portable copy and delete functions.
	(test): Get better temp file.
	(probe): Probe could have arguments.

2001-08-17  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot.pl.in (xst_boot_parse_global_kw): Report that no lilo.conf
	was found.
	(xst_boot_parse_global): same.
	(xst_boot_parse_images): same.

	* general.pl.in (xst_directive_run): Send a begin report whenever
	a directive is run, except for "end".
	Some other function name changes.

	* *.in: s/&xst_end (/&xst_report_end (/;
	
	* report.pl.in (xst_report_begin): Moved from general.pl.in:xst_begin.
	(xst_report_end): same.

Thu Aug 16 02:02:18 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* platform.pl.in (xst_platform_ensure_supported): Removed extra
	xst_end calls.

	* report.pl.in (xst_report): Report major too.

2001-08-16  Arturo Espinosa Aldama  <arturo@ximian.com>

	* ishare.pl.in (xst_ishare_dhcp_conf_add_interface): Oops:
	missing semicolons here.

2001-08-15  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot.pl.in: Removed use strict until we can honour this
	clause.

2001-08-15  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_probe): Added X probing functions.
	Added Modeline functions. Added ability to add new sections.

2001-08-14  Arturo Espinosa Aldama  <arturo@ximian.com>

	* general.pl.in (xst_directive_fail): Some functions that
	have to be called every time a directive fails for different
	reasons.
	(xst_directive_run): Use this new thing, which now sends
	the end directive and the end of request string, so frontend
	doesn't hang. Renamed from xst_run_directive.
	(xst_run): Use directive_run.

2001-08-13  Arturo Espinosa Aldama  <arturo@ximian.com>

	* file.pl.in (xst_file_close): New abstraction for close.
	I got some errors for doing close undef (although perl -d has